<resources>
    <string name="app_name">PivotJot</string>

    <string name="hint_title">Story Title:</string>
    <string name="btn_submit">Submit</string>
    <string name="error_no_story">Input a story title</string>
    <string name="error_no_project">No project selected</string>
    <string name="error_no_type">No type selected</string>
    <string name="error_network">Network error occurred, check your connection</string>
    <string name="error_auth">Authentication error occurred, re-enter your credentials</string>
    <string name="post_success">Story Added</string>
    <string name="description_placeholder">This story was jotted down with PivotJot, more information should be added manually before moving out of Icebox. http://bit.ly/pivotjot</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login_prompt">Log in with your Pivotal Tracker credentials</string>
    <string name="btn_forgot_pw">Forgot Password</string>
    <string name="btn_login">Login</string>
    <string name="error_username">Enter username</string>
    <string name="error_password">Enter password</string>
    <string name="error_login">Incorrect username or password</string>
    <string name="menu_logout">Logout</string>
    <string name="include_description">Include Placeholder Description</string>
    <string name="hint_description">(Optional description after colon)</string>
</resources>
