<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/login_height"
    android:background="@android:color/white"
    android:layout_margin="@dimen/login_margin"
    android:layout_gravity="center_horizontal"
    android:padding="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/login_prompt"
        android:singleLine="true"
        android:textSize="12sp"
        android:gravity="center_vertical|start"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_username"/>
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:hint="@string/hint_username"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_password"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_forgot_pw"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_forgot_pw"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_login"/>
    </LinearLayout>
</LinearLayout>